@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Documentation of what is better in Test2 (#663)
+
 1.302051  2016-08-11 20:26:22-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Fix setting hub when getting context
